// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/KeyboardShortcutsModal should match snapshot modal 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="shortcutsModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal shortcuts-modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="shortcuts-content"
          >
            <div
              class="divider modal-header"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
              <h1
                class="modal-title"
                id="shortcutsModalLabel"
              >
                <strong>
                  <div
                    class="shortcut-line"
                  >
                    <span>
                      Keyboard shortcuts
                    </span>
                    <mark
                      class="shortcut-key shortcut-key--shortcut-modal"
                    >
                      Ctrl
                    </mark>
                    <mark
                      class="shortcut-key shortcut-key--shortcut-modal"
                    >
                      /
                    </mark>
                  </div>
                </strong>
              </h1>
            </div>
            <div
              class="modal-body"
              tabindex="0"
            >
              <div
                tabindex="-1"
              />
              <div
                class="row"
              >
                <div
                  class="col-sm-4"
                >
                  <div
                    class="section"
                  >
                    <div>
                      <h3
                        class="section-title"
                      >
                        <strong>
                          Navigation
                        </strong>
                      </h3>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Previous channel:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Up
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Next channel:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Down
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Previous unread channel:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Up
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Next unread channel:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Down
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Previous team:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Up
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Next team:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Down
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Navigate to a specific team:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          [1-9]
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Quick channel navigation:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          K
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Direct messages menu:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          K
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Settings:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          A
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Recent mentions:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          M
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Set focus to input field:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          L
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Open or close the right sidebar:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          .
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Expand the right sidebar:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          .
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          View channel info:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          I
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Toggle unread/all channels:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          U
                        </mark>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="col-sm-4"
                >
                  <div
                    class="section"
                  >
                    <div>
                      <h3
                        class="section-title"
                      >
                        <strong>
                          Messages
                        </strong>
                      </h3>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Works inside an empty input field
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Edit last message in channel:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Up
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Reply to last message in channel:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Up
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            React to last message:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            ⧵
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Reprint previous message:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Up
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Reprint next message:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Down
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Autocomplete
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Username:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            @
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            [a-z]
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Tab
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Channel:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            ~
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            [a-z]
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Tab
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Emoji:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            :
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            [a-z]
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Tab
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Formatting
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Bold:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            B
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Italic:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            I
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Link:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Alt
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            K
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Searching
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            In channel:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            F
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Files
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Upload files:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            U
                          </mark>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="col-sm-4"
                >
                  <div
                    class="section"
                  >
                    <div
                      class="section--lower"
                    >
                      <h3
                        class="section-title"
                      >
                        <strong>
                          Built-in Browser Commands
                        </strong>
                      </h3>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Back in history:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Left
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Forward in history:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Right
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Zoom in:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          +
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Zoom out:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          -
                        </mark>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Works inside an input field
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Highlight text to the previous line:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Up
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Highlight text to the next line:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Down
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Create a new line:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Enter
                          </mark>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="info__label"
              >
                Begin a message with / for a list of all the available slash commands.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/KeyboardShortcutsModal should match snapshot modal with Calls enabled 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="shortcutsModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal shortcuts-modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="shortcuts-content"
          >
            <div
              class="divider modal-header"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
              <h1
                class="modal-title"
                id="shortcutsModalLabel"
              >
                <strong>
                  <div
                    class="shortcut-line"
                  >
                    <span>
                      Keyboard shortcuts
                    </span>
                    <mark
                      class="shortcut-key shortcut-key--shortcut-modal"
                    >
                      Ctrl
                    </mark>
                    <mark
                      class="shortcut-key shortcut-key--shortcut-modal"
                    >
                      /
                    </mark>
                  </div>
                </strong>
              </h1>
            </div>
            <div
              class="modal-body"
              tabindex="0"
            >
              <div
                tabindex="-1"
              />
              <div
                class="row"
              >
                <div
                  class="col-sm-4"
                >
                  <div
                    class="section"
                  >
                    <div>
                      <h3
                        class="section-title"
                      >
                        <strong>
                          Navigation
                        </strong>
                      </h3>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Previous channel:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Up
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Next channel:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Down
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Previous unread channel:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Up
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Next unread channel:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Down
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Previous team:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Up
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Next team:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Down
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Navigate to a specific team:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          [1-9]
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Quick channel navigation:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          K
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Direct messages menu:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          K
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Settings:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          A
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Recent mentions:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          M
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Set focus to input field:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          L
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Open or close the right sidebar:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          .
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Expand the right sidebar:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          .
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          View channel info:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          I
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Toggle unread/all channels:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Shift
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          U
                        </mark>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="col-sm-4"
                >
                  <div
                    class="section"
                  >
                    <div>
                      <h3
                        class="section-title"
                      >
                        <strong>
                          Messages
                        </strong>
                      </h3>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Works inside an empty input field
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Edit last message in channel:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Up
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Reply to last message in channel:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Up
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            React to last message:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            ⧵
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Reprint previous message:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Up
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Reprint next message:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Down
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Autocomplete
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Username:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            @
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            [a-z]
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Tab
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Channel:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            ~
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            [a-z]
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Tab
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Emoji:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            :
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            [a-z]
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Tab
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Formatting
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Bold:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            B
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Italic:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            I
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Link:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Alt
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            K
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Searching
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            In channel:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            F
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Files
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Upload files:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            U
                          </mark>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="col-sm-4"
                >
                  <div
                    class="section"
                  >
                    <div
                      class="section--lower"
                    >
                      <h3
                        class="section-title"
                      >
                        <strong>
                          Built-in Browser Commands
                        </strong>
                      </h3>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Back in history:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Left
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Forward in history:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Alt
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Right
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Zoom in:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          +
                        </mark>
                      </div>
                      <div
                        class="shortcut-line"
                      >
                        <span>
                          Zoom out:
                        </span>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          Ctrl
                        </mark>
                        <mark
                          class="shortcut-key shortcut-key--shortcut-modal"
                        >
                          -
                        </mark>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Works inside an input field
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Highlight text to the previous line:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Up
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Highlight text to the next line:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Down
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Create a new line:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Enter
                          </mark>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="section"
                  >
                    <div>
                      <h3
                        class="section-title"
                      >
                        <strong>
                          Calls
                        </strong>
                      </h3>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Global
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Join call in current channel:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Alt
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            S
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Call widget
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Mute or unmute:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Space
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Raise or lower hand:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Y
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Share or unshare the screen:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            E
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Show or hide participants list:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Alt
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            P
                          </mark>
                          <span>
                            	|	
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            P
                          </mark>
                        </div>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Leave current call:
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Ctrl
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Shift
                          </mark>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            L
                          </mark>
                        </div>
                      </div>
                      <div
                        class="subsection"
                      >
                        <h4
                          class="subsection-title"
                        >
                          Expanded view (pop-out window)
                        </h4>
                        <div
                          class="shortcut-line"
                        >
                          <span>
                            Hold to unmute (push to talk):
                          </span>
                          <mark
                            class="shortcut-key shortcut-key--shortcut-modal"
                          >
                            Space
                          </mark>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="info__label"
              >
                Begin a message with / for a list of all the available slash commands.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
